# SO-magazyn-firmy-spedycyjnej

./: .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  run.sh
.github/workflows/: release.yml  test.yaml
docker/: Dockerfile  docker-compose.yaml  docker-compose.yml
docs/raport/: simulation_raport_1.txt  simulation_raport_4.txt
include/: Belt.h  Config.h  Dispatcher.h  Express.h  Manager.h  SessionManager.h  Shared.h  Truck.h  Worker.h
include/terminal/: CommandResolver.h  TerminalAction.h  TerminalManager.h
src/: main.cpp  main_belt.cpp  main_dispatcher.cpp  main_express.cpp  main_terminal.cpp  main_truck.cpp  main_worker.cpp
test/: belt_test.cpp  config_test.cpp  dispatcher_test.cpp  express_test.cpp  manager_test.cpp  session_manager_test.cpp  shared_test.cpp  terminal_manager.cpp  terminal_manager_test.cpp  truck_test.cpp  worker_test.cpp
